Color correction for own shift highlighting

--- a/public/css/vedst.css
+++ b/public/css/vedst.css
@@ -447,12 +447,12 @@ input[type=number],
 
 /* my event */
 .cal-month-my-event {
-    border: 3px solid yellow;
+    border: 3px solid #FFEA58;
     border-radius: 5px;
 }
 
 .my-shift {
     margin: 0px !important;
-    background-color: yellow;
+    background-color: #FFF89B;
     padding: 8px !important;
 }
